# 42_Ft_ls

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ft_ls.h
libft/: CMakeLists.txt  Makefile
libft/include/: libft.h  printf.h
libft/src/: ft_abs.c  ft_char_to_str.c  ft_free.c  ft_free_char_2d_arr.c  ft_pow.c  ft_power_ten.c  ft_return.c  ft_tolower.c  ft_toupper.c  ft_word_count.c
libft/src/atoi_itoa/: ft_atoi.c  ft_atoi_base.c  ft_itoa.c  ft_itoa_base.c  ft_ldtoa.c  ft_ldtoa_prec.c  ft_lltoa.c  ft_mtob.c  ft_mtob_raw.c  ft_ulltoa.c  ft_utoa.c  ft_utoa_base.c
libft/src/gnl/: get_next_line.c
libft/src/is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_isprint.c
libft/src/lst/: ft_lstadd.c  ft_lstappend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
libft/src/mem/: ft_mem_rev.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memdup.c  ft_memmove.c  ft_memset.c
libft/src/printf/: f_after_dot.c  f_special.c  (+15 more)
src/: ls_debug.c  ls_ent_get.c  ls_entry.c  ls_errors.c  ls_flags.c  ls_flags_end.c  ls_free.c  ls_get_flags.c  ls_nofiles.c  ls_orders.c  ls_orders_arrange.c  ls_orders_con.c  ls_orders_create.c  ls_orders_create_rec.c  ls_orders_fill_stat.c  ls_print.c  ls_print_attributes.c  ls_print_end.c  ls_print_list.c  ls_print_order.c  ls_sort.c  ls_sort_compare.c  ls_sort_compare_entry.c  ls_sort_compare_order.c  ls_sort_con.c  ls_sort_end.c  ls_sort_flags.c  ls_sort_merge.c  main.c
test/: Makefile  Makefile_proj  myexe
test/include/: header.h  header_4.h
test/src/: main.c
(+55 files in other folders)
